[package]
name = "e2fslibs-sys"
version = "0.2.0"
authors = ["Xavier Bestel <xavier.bestel@free.fr>"]
links = "e2fslibs"
description = "FFI bindings to e2fslibs"
license = "LGPL-2.0"
repository = "https://github.com/bestouff/e2fslibs-sys"
categories = ["external-ffi-bindings", "filesystem"]
keywords = ["ext2fs", "ext3fs", "ext4fs"]

[dependencies]
libc = "0.2"

[lib]
name = "e2fslibs_sys"
path = "lib.rs"

[build-dependencies]
pkg-config = "0.3"
bindgen = "0.30.0"
